# secret-archer

./: .gitignore  Architektur.txt  CMakeLists.txt  Cakefile  README.md  build-script.py  config.coffee  devinit.bat  devinit.sh  init.bat  init.sh  installSFML.cmake  package.json  server.coffee
app/: initialize.coffee
app/client/: game.coffee
app/views/: index.jade
client/: planet.h
client/src/: CMakeLists.txt  ai.h  control.cpp  control.h  expandai.cpp  expandai.h  explosion.cpp  explosion.h  main.cpp  planet.h  sendorder.cpp  sendorder.h  serverconnection.cpp  serverconnection.h  ship.cpp  ship.h  version.h
client/src/util/: CMakeLists.txt  error.cpp  error.h  log.cpp  log.h
client/test/: CMakeLists.txt  README  secretarcher_test  testserverconnection.cpp
cmake/: installSFGUI.cmake  installSFML.cmake  installThor.cmake
cmake/Modules/: util.cmake
http/: server.go
http/vector2/: vector2.go
res/: CMakeLists.txt
scripts/client/: game.coffee  game.js
scripts/server/: server.coffee
server/: pyersver.py
server/src/client/: client.go
server/src/http/: server.go
server/src/vector2/: vector2.go
src/: CMakeLists.txt  testSFML.cpp
views/: index.jade
